syntax = "proto3";

package auth;

service AuthHandler {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc SendOTP (SendOTPRequest) returns (SendOTPResponse);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
}

message RegisterData {
  User user = 1;
}

message LoginData {
  string access_token = 1;
  string refresh_token = 2;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string message = 1;
  RegisterData data = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  LoginData data = 2;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  string message = 1;
}

message SendOTPRequest {
  string email = 1;
}

message SendOTPResponse {
  string message = 1;
}

message VerifyEmailRequest {
  string email = 1;
  string otp = 2;
}

message VerifyEmailResponse {
  string message = 1;
}

message ForgotPasswordRequest {
  string email = 1;
  string password = 2;
  string otp = 3;
}

message ForgotPasswordResponse {
  string message = 1;
}